hphp/test/slow/yield/throw/throw_rethrow.php.expectf
before yield
Caught: exception 'RuntimeException' with message 'throw' in %s/throw_rethrow.php:16
Stack trace:
%a {main}


Fatal error: Uncaught exception 'LogicException' with message 'new throw' in %s/throw_rethrow.php:10
Stack trace:
#0 (): gen()
#1 %s/throw_rethrow.php(16): Generator->throw()
%a {main}
